src/test/ui/resolve/token-error-correct-4.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/token-error-correct-4.rs:9:1
   |
LL |     setsuna(kazusa();
   |            - unmatched opening delimiter begins here
LL | }
   | ^ mismatched closing delimiter

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
  --> $DIR/token-error-correct-4.rs:8:21
   |
LL |     setsuna(kazusa();
   |                     ^ expected one of `)`, `,`, `.`, `?`, or an operator

error: aborting due to 2 previous errors

